--- a/.github/workflows/clean_stadiums.yml
+++ b/.github/workflows/clean_stadiums.yml
@@ -1,4 +1,3 @@
-# .github/workflows/clean_stadiums.yml
 name: Clean Stadiums Missing Coordinates
 
 on:
@@ -11,7 +10,8 @@ jobs:
   clean:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -19,15 +19,25 @@ jobs:
           python-version: "3.11"
 
       - name: Install pandas
-        run: pip install pandas
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas
 
       - name: Run cleaner
-        run: python scripts/clean_stadiums_missing_coords.py
+        run: |
+          python scripts/clean_stadiums_missing_coords.py
 
       - name: Commit cleaned file
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/reference/stadiums.csv summaries/clean_stadiums_summary.txt
-          git diff --staged --quiet || git commit -m "chore: clean stadiums missing coords [skip ci]" || echo "No changes"
+
+          # Add the cleaned stadiums file
+          git add data/reference/stadiums.csv
+
+          # Force-add the summary file even though it's in .gitignore
+          git add -f summaries/clean_stadiums_summary.txt
+
+          # Commit and push only if there are actual changes
+          git diff --staged --quiet || git commit -m "chore: clean stadiums missing coords [skip ci]" || echo "No changes to commit"
           git push
