--- a/.github/workflows/map_cfbd_ids.yml
+++ b/.github/workflows/map_cfbd_ids.yml
@@ -1,21 +1,24 @@
 name: Map CFBD IDs
 on: workflow_dispatch
-permissions: { contents: write }
+permissions:
+  contents: write
 jobs:
   map:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
+        with:
+          python-version: "3.11"
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install pandas requests
+          pip install pandas requests rapidfuzz
       - name: Map games to CFBD IDs
         env:
           CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
-        run: python scripts/map_games_to_cfbd_ids.py
+        run: |
+          python scripts/map_games_to_cfbd_ids.py
       - name: Commit updated games.csv
         run: |
           git config user.name "github-actions[bot]"
